<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.miplot.tipsplit.activities.GroupMembersActivity">

    <item
        android:id="@+id/new_group"
        android:orderInCategory="100"
        android:title="@string/new_group"
        app:showAsAction="never" />

    <item
        android:id="@+id/join_group"
        android:orderInCategory="100"
        android:title="@string/join_group"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>